<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VanDoren CRM</string>
    <string name="action_settings">Settings</string>

    <string name="action_setting_logout">Logout</string>

    <string name="title_section0">Search</string>
    <string name="title_section1_item0">Find Company</string>
    <string name="title_section1_item1">Find Employee</string>
    <string name="title_section2">News</string>
    <string name="title_section3">Alerts</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Company Data window -->
    <string name="pref_connection_category">Connection</string>
    <string name="pref_connection_title">Service IP</string>
    <string name="pref_connection_summary">Please provide service IP address</string>
    <string name="pref_connection_key">serviceIP</string>
    <string name="Companyinfo_telefax">Telefax</string>
    <string name="Companyinfo_country">Country</string>
    <string name="Companyinfo_postcode">PostCode</string>
    <string name="Companyinfo_city">City</string>
    <string name="Companyinfo_address">Address</string>
    <string name="Companyinfo_companyimage">company</string>

    <!-- Employee Data window -->
    <string name="EmployeeInfo_Prospect">Prospect</string>
    <string name="EmployeeInfo_Function">Function</string>

</resources>
